Further tweaked some stuff on landing. Fixed responsiveness problem with whitespace to the right.

--- a/server/web/css/style.less
+++ b/server/web/css/style.less
@@ -71,6 +71,8 @@ html, body, #container {
 	margin: 0;
 	padding: 0;
 	height: 100%;
+	width: auto !important;
+	overflow-x: hidden !important;
 }
 
 #head {
@@ -171,10 +173,16 @@ Photo credit:
 		position: relative;
 		color: #fff;
 
+		a.btn-ordinary {
+			color: @sixth-color;
+
+			&:hover {
+				color: @fourth-color;
+			}
+		}
 		h2 {
 			text-shadow: rgba(0, 0, 0, 0.8) 0 0 10px;
 		}
-
 		img {
 			-webkit-filter: drop-shadow(0 0 5px rgb(0,0,0));
 			filter: drop-shadow(0 0 5px rgb(0,0,0));
